--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by appls2appls</title>
+  <title>Title here</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -12,7 +12,7 @@
 
 
 <h4>Note that this website is very early in developement and there will be more to come.</h4>
-<button class="button button1" onclick="location.href = 'https://github.com/appls2appls';" id="myButton">I wonder what this button does 🤔</button>
+<button class="button button1" onclick="location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';" id="myButton">I wonder what this button does 🤔</button>
 <!-- partial -->
   <script  src="./script.js"></script>
 
