--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Title here</title>
+  <title>CodePen - A Pen by appls2appls</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
+<div>
 <h1>Woah a website</h1>
 
 
-<h4>Note that this website is very early in developement and there will be more to come.</h4>
-<button class="button button1" onclick="location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';" id="myButton">I wonder what this button does 🤔</button>
+<h2>Note that this website is very early in developement and there will be more to come.</h2>
+</div>
+<br>
+<br>
+<h3>Links</h3>
+<button class="button button1" onclick="location.href = 'https://github.com/appls2appls';" id="myButton">Github Profile</button>
+<button class="button button2" onclick="location.href = 'https://twitter.com/_appls2appls';" id="myButton">Twitter Profile</button>
 <!-- partial -->
   <script  src="./script.js"></script>
 
