added page for links

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 <h1>Woah a website</h1>
 
 
-<h2>Note that this website is very early in developement and there will be more to come.</h2>
 </div>
 <br>
 <br>
-<h3>Links</h3>
-<button class="button button1" onclick="location.href = 'https://github.com/appls2appls';" id="myButton">Github Profile</button>
-<button class="button button2" onclick="location.href = 'https://twitter.com/_appls2appls';" id="myButton">Twitter Profile</button>
-<!-- partial -->
+<h2>Links to all my social profiles</h2>
+<button class="button button3" onclick="location.href = './about.html';" id="myButton">Click Here</button>
+
   <script  src="./script.js"></script>
 
 </body>
