--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
+
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Some website</title>
-  <link rel="stylesheet" href="./style.css">
+  <meta name="author" content="">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<div>
-<h1>Woah a website</h1>
 
+  <p>This website will be undergoing many changes during this month.</p>
 
-</div>
-<br>
-<br>
-<h2>Links to all my social profiles</h2>
-<button class="button button3" onclick="location.href = './about.html';" id="myButton">Click Here</button>
-
-  <script  src="./script.js"></script>
-
+  <script src="js/script.js"></script>
 </body>
+
 </html>
